--- a/index.html
+++ b/index.html
@@ -8,50 +8,54 @@
       <header>
           <div> <!--Верхнее меню хедера-->
               <!--Логотип-->
-             <a href=""> <img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=108 height=18>
+             <a href="">
+                 <img src="img/svg/logo-technomart.svg" alt="Логотип магазина Техномарт" width=109 height=19>
             </a>
               <!--Форма поиска-->
-              <div>
-                   <img src="img/svg/icon-search.svg" alt="Поиск" width=17 height=17>
+            <div>
+                <img src="img/svg/icon-search.svg" alt="Поиск" width=17 height=17>
                  Поиск:
-              </div>
-              <div><!--Форма отображения закладок-->
+            </div>
+            <div><!--Форма отображения закладок-->
               <img src="img/svg/icon-bookmark.svg" alt="Закладки" width=14 height=16>
               Закладки: 0
-              </div>
-              <div><!--Форма отображения Корзины-->
+            </div>
+            <div><!--Форма отображения Корзины-->
               <img src="img/svg/icon-cart.svg" alt="Иконка Корзины" width=15 height=15>
               Корзина: 0
-              <a href="/cart.html">Оформить заказ</a>
-              </div>
+              <a href="./cart.html">Оформить заказ</a>
+            </div>
           </div>
           <div> <!-- среднняя часть хедера -->
               <i>Интернет-магазин
                     строительных материалов
                     и инструментов для ремонта
-                    </i>
-              <div><img src="img/svg/icon-phone.svg" alt="Иконка телефона" width=19 height=19>
-                  <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
+              </i>
+              <div>
+                  <img src="img/svg/icon-phone.svg" alt="Иконка телефона" width=19 height=19>
+                  <a href="tel:+78125550555">+7 (812) 555-05-55</a>
               </div>
               <span>
                   г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               </span>
               <div>
-                  <a href="/enter.html">
+                  <a href="">
                   <img src="img/svg/icon-login.svg" alt="Иконка входа" width=20 height=17>
                       Войти
                   </a>
-                 <a href="/registration.html"> Регистрация</a>
+                 <a href="">
+                     Регистрация
+                 </a>
               </div>
-             <nav>
-                 <a href="/index.html">Главная</a>
+              <nav>
+                 <a href="#">Главная</a>
                  <a href="">Компания</a>
-                 <a href="/catalog.html">Каталог</a>
+                 <a href="./catalog.html">Каталог</a>
                  <a href="">Новости</a>
                  <a href="">Спецпредложения</a>
                  <a href="">Доставка</a>
                  <a href="">Контакты</a>
-             </nav>
+              </nav>
           </div>
       </header>
       <main>
@@ -73,12 +77,13 @@
                  <div>
                        <a href="/about.html"> Подробнее о компании</a>
                  </div>
-               </div>
+              </div>
               <div><!--Разметка блока КОНТАКТЫ -->
                   <h2>КОНТАКТЫ</h2>
                   <p>Вы можете забрать товар сами,<br>
                   заехав в наш офис:</p>
-                  <a href=""><img src="img/map"> место для карты прохода</a>
+                  <a href=""><img src="img/map.png" alt="Место нахождения компании:г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+                  </a>
                   <div>
                        <input type="button" value=" Заблудились? НапиШИТЕ НАМ!">
                   </div>
@@ -87,7 +92,9 @@
       </main>
       <footer> <!-- верхняя часть футера-->
         <div> <!--логотип + список-->
-         <a href=""><img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=138 height=23></a>
+         <a href="">
+             <img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=138 height=23>
+         </a>
             <ul>
               <li><a href="/index.html">Главная</a></li>
               <li><a href="">Компания</a></li>
@@ -97,37 +104,33 @@
               <li><a href="">Доставка</a></li>
               <li><a href="contacts.html">Контакты</a></li>
             </ul>
-          </div>
+        </div>
         <div><!--адрес + список-->
-            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
-                      <a href="tel:+7 (812) 555-05-55">+7 (812) 555-05-55</a>
-                     </p>
+            <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <ul>
                 <li><a href="">Материалы</a></li>
                 <li><a href="">Техника</a></li>
                 <li><a href="">Инструмент</a></li>
                 <li><a href="">Спецпредложения</a></li>
         </div>
-        
         <div> <!-- нижняя линия на темном фоне-->
-             &copy 2010–2019 Компания &laquoТехномарт&raquo
-Все права защищены
-        </div>
+&copy 2010–2019 Компания &laquoТехномарт&raquo Все права защищены
+        
            <ul>
-               <li>VK</li>
-               <li>fb</li>
-               <li>insta</li>
+               <li><a href=""><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
+               <li><a href=""><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
+               <li><a href=""><img src="img/insta-icon.png" alt="группа Инстаграмм"></a></li>
            </ul>
            <p>
             Обратная связь:<br>
-<a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
            </p>
             <p>
-            Разработано —
-htmlacademy.ru
+            Разработано — htmlacademy.ru
            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </p>
-        </section>
+        </div>
       </footer>
   </body>
 </html>
