--- a/index.html
+++ b/index.html
@@ -6,33 +6,37 @@
   </head>
   <body>
       <header>
-          <div> <!--Верхнее меню хедера-->
-              <!--Логотип-->
+          <!--Верхнее меню хедера-->
+          <div>
+             <!--Логотип-->
              <a href="">
                  <img src="img/svg/logo-technomart.svg" alt="Логотип магазина Техномарт" width=109 height=19>
             </a>
-              <!--Форма поиска-->
+            <!--Форма поиска-->
             <div>
                 <img src="img/svg/icon-search.svg" alt="Поиск" width=17 height=17>
                  Поиск:
             </div>
-            <div><!--Форма отображения закладок-->
+            <!--Форма отображения закладок-->
+            <div>
               <img src="img/svg/icon-bookmark.svg" alt="Закладки" width=14 height=16>
               Закладки: 0
             </div>
-            <div><!--Форма отображения Корзины-->
+            <!--Форма отображения Корзины-->
+            <div>
               <img src="img/svg/icon-cart.svg" alt="Иконка Корзины" width=15 height=15>
               Корзина: 0
               <a href="./cart.html">Оформить заказ</a>
             </div>
           </div>
-          <div> <!-- среднняя часть хедера -->
+          <!-- среднняя часть хедера -->
+          <div>
               <i>Интернет-магазин
                     строительных материалов
                     и инструментов для ремонта
               </i>
               <div>
-                  <img src="img/svg/icon-phone.svg" alt="Иконка телефона" width=19 height=19>
+                  <img src="img/svg/icon-phone.svg" alt="Иконка телефона: + 7 8 1 2 5 5 5 0 5 5 5" width=19 height=19>
                   <a href="tel:+78125550555">+7 (812) 555-05-55</a>
               </div>
               <span>
@@ -47,16 +51,17 @@
                      Регистрация
                  </a>
               </div>
-              <nav>
-                 <a href="#">Главная</a>
-                 <a href="">Компания</a>
-                 <a href="./catalog.html">Каталог</a>
-                 <a href="">Новости</a>
-                 <a href="">Спецпредложения</a>
-                 <a href="">Доставка</a>
-                 <a href="">Контакты</a>
-              </nav>
           </div>
+          <!-- Нижнее меню хедера -->
+          <nav>
+             <a href="#">Главная</a>
+             <a href="">Компания</a>
+             <a href="./catalog.html">Каталог</a>
+             <a href="">Новости</a>
+             <a href="">Спецпредложения</a>
+             <a href="">Доставка</a>
+             <a href="">Контакты</a>
+          </nav>
       </header>
       <main>
           <h1>Строительные товары</h1>
@@ -93,16 +98,16 @@
       <footer> <!-- верхняя часть футера-->
         <div> <!--логотип + список-->
          <a href="">
-             <img src="img/logo-technomart.png" alt="Логотип магазина Техномарт" width=138 height=23>
+             <img src="img/svg/logo-technomart.svg" alt="Логотип магазина Техномарт" width=138 height=23>
          </a>
             <ul>
-              <li><a href="/index.html">Главная</a></li>
+              <li><a href="#">Главная</a></li>
               <li><a href="">Компания</a></li>
               <li><a href="/catalog.html">Каталог</a></li>
               <li><a href="">Новости</a></li>
               <li><a href="">Спецпредложения</a></li>
               <li><a href="">Доставка</a></li>
-              <li><a href="contacts.html">Контакты</a></li>
+              <li><a href="">Контакты</a></li>
             </ul>
         </div>
         <div><!--адрес + список-->
@@ -113,10 +118,10 @@
                 <li><a href="">Техника</a></li>
                 <li><a href="">Инструмент</a></li>
                 <li><a href="">Спецпредложения</a></li>
+            </ul>
         </div>
         <div> <!-- нижняя линия на темном фоне-->
 &copy 2010–2019 Компания &laquoТехномарт&raquo Все права защищены
-        
            <ul>
                <li><a href=""><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
                <li><a href=""><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
