--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"/><circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"/><path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
                   </svg>Корзина:0
                 </div>
-                <a href="./cart.html">Оформить заказ</a>
+                <a>Оформить заказ</a>
               </div>
           <!-- среднняя часть хедера -->
           <div>
@@ -55,30 +55,30 @@
               <span>
                  г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               </span>
-              <a href="">
+              <a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18" viewBox="0 0 20 18"><path fill="#c5c5c5" d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
                 </svg>
               </a>
                   Равшан Джамшутович
-              <a href="">
+              <a>
                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="17" viewBox="0 0 21 17">
                     <g fill="#c5c5c5"><path fill="#c5c5c5" d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
                     <path fill="#c5c5c5" d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
                     </g>
                 </svg>
               </a>
-              <a href="">Мои заказы</a>
-              <a href="">Личный кабинет</a>
+              <a>Мои заказы</a>
+              <a>Личный кабинет</a>
           </div>
           <!-- Нижнее меню хедера -->
           <nav>
               <a href="./index.html">Главная</a>
-              <a href="">Компания</a>
-              <a href="#">Каталог</a>
-              <a href="">Новости</a>
-              <a href="">Спецпредложения</a>
-              <a href="">Доставка</a>
-              <a href="">Контакты</a>
+              <a>Компания</a>
+              <a>Каталог</a>
+              <a>Новости</a>
+              <a>Спецпредложения</a>
+              <a>Доставка</a>
+              <a>Контакты</a>
           </nav>
       </header>
       <main><!--верхнее меню под хедером -->
@@ -93,16 +93,22 @@
               </a>
               <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
                   <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
-              </svg>
+             </svg>
+             <a>
               Каталог
               <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
                   <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
               </svg>
+             </a>
+             <a>
               Инструмент
               <svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12">
                   <path fill="#C1C6CE" d="M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z"/>
               </svg>
+             </a>
+             <a>
               Перфораторы
+             </a>
          </div>
          <h1>ПЕРФОРАТОРЫ </h1><!--название-->
          <div>
@@ -167,56 +173,44 @@
                <img src="img/content/Bosch_BFG_3000.jpg" alt=" аккумкляторный перформатор Bosch_BFG_3000, средних размеров, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
               <p>Перфоратор BOSCH BFG 3000</p>
               <del> 22500 Р.</del>
-              <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                  <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-              </svg>
               <p>15500 Р.</p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 2-->
            <div>
                <img src="img/content/Bosh_BFG_6000.jpg" alt="аккумкляторный перформатор Bosch_BFG_6000,  Большого размера, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <p>Перфоратор BOSCH BFG 6000</p>
                <del>30500 Р.</del>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>25500 Р.<p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 3-->
            <div>
                <img src="img/content/Bosh_BFG_2000.jpg" alt="аккумкляторный перформатор Bosch_BFG_2000,  Большого размера, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <img src="img/new.png" alt="тоавр новинка">
                <p>Перфоратор BOSCH BFG 2000</p>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>12500 Р."</p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 4-->
            <div>
                <img src="img/content/Bosch_BFG_3000.jpg" alt="аккумкляторный перформатор Bosch_BFG_3000, средних размеров, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <p>Перфоратор BOSCH BFG 3000</p>
                <del> 22500 Р.</del>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>15500 Р.</p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 5-->
            <div>
@@ -224,27 +218,21 @@
                <img src="img/new.png" alt="тоавр новинка">
                <p>Перфоратор BOSCH BFG 6000</p>
                <p><del>30500 Р.</del></p>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>25500 Р.<p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 6-->
            <div>
                <img src="img/content/Bosh_BFG_2000.jpg" alt="аккумкляторный перформатор Bosch_BFG_2000,  Большого размера, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <p>Перфоратор BOSCH BFG 2000</p>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>12500 Р."</p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 7-->
            <div>
@@ -252,41 +240,32 @@
                <img src="img/new.png" alt="тоавр новинка">
                <p>Перфоратор BOSCH BFG 3000</p>
                <del> 22500 Р.</del>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>15500 Р.</p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 8-->
            <div>
                <img src="img/content/Bosh_BFG_6000.jpg" alt="аккумкляторный перформатор Bosch_BFG_6000,  Большого размера, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <p>Перфоратор BOSCH BFG 6000</p>
                <del>30500 Р.</del>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>25500 Р.<p>
            </div>
            <div>
-               <button width="135" height="38">купить</button>
-               <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
            <!--окно окно товара 9-->
            <div>
                <img src="img/content/Bosh_BFG_2000.jpg" alt="аккумкляторный перформатор Bosch_BFG_2000,  Большого размера, с переключателем режима сверления, перфорирования и отбойный молоток. Фирменной раскрасски синего цвета и красными буквами">
                <p>Перфоратор BOSCH BFG 2000</p>
-               <svg xmlns="http://www.w3.org/2000/svg" width="141" height="38" viewBox="0 0 141 38">
-                   <path fill="#EE3643" d="M121.632 0H3C1.35 0 0 1.35 0 3v32c0 1.65 1.35 3 3 3h118.632L141 19 121.632 0z"/>
-               </svg>
                <p>12500 Р."</p>
            </div>
            <div>
-                <button width="135" height="38">купить</button>
-                <button width="135" height="38">в закладки</button>
+               <a>купить</a>
+               <a>в закладки</a>
            </div>
        </section>
       <footer> <!-- верхняя часть футера-->
@@ -306,31 +285,31 @@
             </a>
             <ul>
                <li><a href="./index.html">Главная</a></li>
-               <li><a href="">Компания</a></li>
-               <li><a href="#">Каталог</a></li>
-               <li><a href="">Новости</a></li>
-               <li><a href="">Спецпредложения</a></li>
-               <li><a href="">Доставка</a></li>
-               <li><a href="">Контакты</a></li>
+               <li><a>Компания</a></li>
+               <li><a>Каталог</a></li>
+               <li><a>Новости</a></li>
+               <li><a>Спецпредложения</a></li>
+               <li><a>Доставка</a></li>
+               <li><a>Контакты</a></li>
             </ul>
         </div>
         <div><!--адрес + список-->
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
                <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <ul>
-               <li><a href="">Материалы</a></li>
-               <li><a href="">Техника</a></li>
-               <li><a href="">Инструмент</a></li>
-               <li><a href="">Спецпредложения</a></li>
+               <li><a>Материалы</a></li>
+               <li><a>Техника</a></li>
+               <li><a>Инструмент</a></li>
+               <li><a>Спецпредложения</a></li>
             </ul>
         </div>
         <div> <!-- нижняя линия на темном фоне-->
 &copy 2010–2019 Компания &laquoТехномарт&raquo Все права защищены
         </div>
             <ul>
-               <li><a href=""><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
-               <li><a href=""><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
-               <li><a href=""><img src="img/insta-icon.png" alt="группа Инстаграмм"></a></li>
+               <li><a><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
+               <li><a><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
+               <li><a><img src="img/insta-icon.png" alt="группа Инстаграмм"></a></li>
             </ul>
             <p>
                 Обратная связь:
