--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15"><circle fill="#ffffff" cx="4.5" cy="13.5" r="1.5"/><circle fill="#ffffff" cx="12.5" cy="13.5" r="1.5"/><path fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z"/>
               </svg>Корзина:0
             </div>
-            <a href="./cart.html">Оформить заказ</a>
+            <a>Оформить заказ</a>
           </div>
           <!-- среднняя часть хедера -->
           <div>
@@ -56,7 +56,7 @@
                   г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
               </span>
               <div>
-                  <a href="">
+                  <a>
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"/><path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"/>
                   </svg>Войти
                   </a>
@@ -67,13 +67,13 @@
           </div>
           <!-- Нижнее меню хедера -->
           <nav>
-             <a href="#">Главная</a>
-             <a href="">Компания</a>
+             <a>Главная</a>
+             <a>Компания</a>
              <a href="./catalog.html">Каталог</a>
-             <a href="">Новости</a>
-             <a href="">Спецпредложения</a>
-             <a href="">Доставка</a>
-             <a href="">Контакты</a>
+             <a>Новости</a>
+             <a>Спецпредложения</a>
+             <a>Доставка</a>
+             <a>Контакты</a>
           </nav>
       </header>
       <main>
@@ -100,7 +100,7 @@
                   <h2>КОНТАКТЫ</h2>
                   <p>Вы можете забрать товар сами,<br>
                   заехав в наш офис:</p>
-                  <a href=""><img src="img/map.png" alt="Место нахождения компании:г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+                  <a><img src="img/map.png" alt="Место нахождения компании:г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
                   </a>
                   <div>
                        <input type="button" value=" Заблудились? НапиШИТЕ НАМ!">
@@ -124,31 +124,31 @@
             </svg>
          </a>
             <ul>
-              <li><a href="#">Главная</a></li>
-              <li><a href="">Компания</a></li>
+              <li><a>Главная</a></li>
+              <li><a>Компания</a></li>
               <li><a href="/catalog.html">Каталог</a></li>
-              <li><a href="">Новости</a></li>
-              <li><a href="">Спецпредложения</a></li>
-              <li><a href="">Доставка</a></li>
-              <li><a href="">Контакты</a></li>
+              <li><a>Новости</a></li>
+              <li><a>Спецпредложения</a></li>
+              <li><a>Доставка</a></li>
+              <li><a>Контакты</a></li>
             </ul>
         </div>
         <div><!--адрес + список-->
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a href="tel:+78125550555">+7 (812) 555-05-55</a>
             <ul>
-                <li><a href="">Материалы</a></li>
-                <li><a href="">Техника</a></li>
-                <li><a href="">Инструмент</a></li>
-                <li><a href="">Спецпредложения</a></li>
+                <li><a>Материалы</a></li>
+                <li><a>Техника</a></li>
+                <li><a>Инструмент</a></li>
+                <li><a>Спецпредложения</a></li>
             </ul>
         </div>
         <div> <!-- нижняя линия на темном фоне-->
 &copy 2010–2019 Компания &laquoТехномарт&raquo Все права защищены
            <ul>
-               <li><a href=""><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
-               <li><a href=""><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
-               <li><a href=""><img src="img/insta-icon.png" alt="группа Инстаграмм"></a></li>
+               <li><a><img src="img/vk-icon.png" alt="группа ВКонтакте"></a></li>
+               <li><a><img src="img/fb-icon.png" alt="группа Фейсбук"></a></li>
+               <li><a><img src="img/insta-icon.png" alt="группа Инстаграмм"></a></li>
            </ul>
            <p>
             Обратная связь:<br>
